# ugc

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  env.dev  env.prod  main.py  manage.py  pyproject.toml  pytest.ini
.cursor/rules/: django-rules.mdc  pydantic-config.mdc  uv-rules.mdc
.cursor/skills/django-env-dev/: SKILL.md
.cursor/skills/django-models/: SKILL.md
.cursor/skills/django-orm/: SKILL.md
accounts/: admin.py  managers.py  models.py  permissions.py  serializers.py  urls.py  views.py
accounts/migrations/: 0001_initial.py  0002_user_deleted_at_user_is_deleted_user_is_operator.py
accounts/tests/: test_jwt_auth.py  test_user_model.py  test_users_api.py
monitoring/: README.md  docker-compose.yml  prometheus.yml
surveys/: admin.py  apps.py  models.py  permissions.py  serializers.py  urls.py  views.py
surveys/migrations/: 0001_initial.py  0002_alter_submissionanswer_answer_and_more.py
surveys/tests/: test_drf_mcp_endpoint_url.py  test_http_metrics_middleware.py  test_metrics_endpoint.py  test_models.py  test_next_question_api.py  test_surveys_crud_api.py
ugc/: asgi.py  http_metrics_middleware.py  metrics.py  settings.py  urls.py  wsgi.py
